--- a/pages/18070.html
+++ b/pages/18070.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_40" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9198/#Item_46" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -317,7 +317,16 @@ margin-left: 0em;
 
 <h4 id="topology">Topology</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/topology">topology</a></strong> (<a class="existingWikiWord" href="/nlab/show/point-set+topology">point-set topology</a>, <a class="existingWikiWord" href="/nlab/show/point-free+topology">point-free topology</a>)</p><p>see also <em><a class="existingWikiWord" href="/nlab/show/differential+topology">differential topology</a></em>, <em><a class="existingWikiWord" href="/nlab/show/algebraic+topology">algebraic topology</a></em>, <em><a class="existingWikiWord" href="/nlab/show/functional+analysis">functional analysis</a></em> and <em><a class="existingWikiWord" href="/nlab/show/topological+homotopy+theory">topological</a> <a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a></em></p><p><a class="existingWikiWord" href="/nlab/show/Introduction+to+Topology">Introduction</a></p><p><strong>Basic concepts</strong></p><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/topology">topology</a></strong> (<a class="existingWikiWord" href="/nlab/show/point-set+topology">point-set topology</a>, <a class="existingWikiWord" href="/nlab/show/point-free+topology">point-free topology</a>)</p>
+
+<p>see also <em><a class="existingWikiWord" href="/nlab/show/differential+topology">differential topology</a></em>, <em><a class="existingWikiWord" href="/nlab/show/algebraic+topology">algebraic topology</a></em>, <em><a class="existingWikiWord" href="/nlab/show/functional+analysis">functional analysis</a></em> and <em><a class="existingWikiWord" href="/nlab/show/topological+homotopy+theory">topological</a> <a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a></em></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/Introduction+to+Topology">Introduction</a></p>
+
+<p><strong>Basic concepts</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/open+subset">open subset</a>, <a class="existingWikiWord" href="/nlab/show/closed+subset">closed subset</a>, <a class="existingWikiWord" href="/nlab/show/neighbourhood">neighbourhood</a></p>
 </li>
@@ -373,7 +382,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/convenient+category+of+topological+spaces">convenient category of topological spaces</a></li>
 </ul>
 </li>
-</ul><p><strong><a href="Top#UniversalConstructions">Universal constructions</a></strong></p><ul>
+</ul>
+
+<p><strong><a href="Top#UniversalConstructions">Universal constructions</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/initial+topology">initial topology</a>, <a class="existingWikiWord" href="/nlab/show/final+topology">final topology</a></p>
 </li>
@@ -405,7 +418,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/colimits+of+normal+spaces">colimits of normal spaces</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/stuff%2C+structure%2C+property">Extra stuff, structure, properties</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/stuff%2C+structure%2C+property">Extra stuff, structure, properties</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/nice+topological+space">nice topological space</a></p>
 </li>
@@ -471,7 +488,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+manifold">topological manifold</a></p>
 </li>
-</ul><p><strong>Examples</strong></p><ul>
+</ul>
+
+<p><strong>Examples</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/empty+space">empty space</a>, <a class="existingWikiWord" href="/nlab/show/point+space">point space</a></p>
 </li>
@@ -559,7 +580,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Warsaw+circle">Warsaw circle</a>, <a class="existingWikiWord" href="/nlab/show/Hawaiian+earring+space">Hawaiian earring space</a></p>
 </li>
-</ul><p><strong>Basic statements</strong></p><ul>
+</ul>
+
+<p><strong>Basic statements</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Hausdorff+spaces+are+sober">Hausdorff spaces are sober</a></p>
 </li>
@@ -645,7 +670,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/CW-complexes+are+paracompact+Hausdorff+spaces">CW-complexes are paracompact Hausdorff spaces</a></p>
 </li>
-</ul><p><strong>Theorems</strong></p><ul>
+</ul>
+
+<p><strong>Theorems</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Urysohn%27s+lemma">Urysohn's lemma</a></p>
 </li>
@@ -677,7 +706,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Jordan+curve+theorem">Jordan curve theorem</a></p>
 </li>
-</ul><p><strong>Analysis Theorems</strong></p><ul>
+</ul>
+
+<p><strong>Analysis Theorems</strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Heine-Borel+theorem">Heine-Borel theorem</a></p>
 </li>
@@ -689,7 +722,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/extreme+value+theorem">extreme value theorem</a></p>
 </li>
-</ul><p><strong><a class="existingWikiWord" href="/nlab/show/topological+homotopy+theory">topological homotopy theory</a></strong></p><ul>
+</ul>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/topological+homotopy+theory">topological homotopy theory</a></strong></p>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/left+homotopy">left homotopy</a>, <a class="existingWikiWord" href="/nlab/show/right+homotopy">right homotopy</a></p>
 </li>
@@ -741,7 +778,7 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/classical+model+structure+on+topological+spaces">classical model structure on topological spaces</a></p>
 </li>
-</ul></div>
+</ul></div></div>
 </div>
 </div>
 
@@ -766,7 +803,7 @@ margin-left: 0em;
 <li><a href='#references'>References</a></li>
 <ul>
 <li><a href='#general'>General</a></li>
-<li><a href='#scanning_map_and_cohomotopy'>Scanning map and cohomotopy</a></li>
+<li><a href='#electric_field_mapscanning_map_and_cohomotopy'>Electric field map/Scanning map and cohomotopy</a></li>
 <li><a href='#ReferencesAlgebraStructureOverOperad'>Algebra structure over little <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>dim</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">dim(X)</annotation></semantics></math>-disk operad</a></li>
 <li><a href='#stable_splitting_of_mapping_spaces_2'>Stable splitting of mapping spaces</a></li>
 <li><a href='#ReferencesInGoodwillieCalculus'>In Goodwillie-calculus</a></li>
@@ -990,7 +1027,7 @@ margin-left: 0em;
 </li>
 </ol>
 
-<p>the <a class="existingWikiWord" href="/nlab/show/scanning+map">scanning map</a> constitutes a <a class="existingWikiWord" href="/nlab/show/homotopy+equivalence">homotopy equivalence</a></p>
+<p>the electric field map/<a class="existingWikiWord" href="/nlab/show/scanning+map">scanning map</a> constitutes a <a class="existingWikiWord" href="/nlab/show/homotopy+equivalence">homotopy equivalence</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Conf</mi><mrow><mo>(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>,</mo><mi>Y</mi><mo>)</mo></mrow><mover><mo>⟶</mo><mi>scan</mi></mover><msup><mi>Ω</mi> <mi>d</mi></msup><msup><mi>Σ</mi> <mi>d</mi></msup><mo stretchy="false">(</mo><mi>Y</mi><mo stretchy="false">/</mo><mo>∂</mo><mi>Y</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
   Conf\left( 
     \mathbb{R}^d, Y
@@ -1061,7 +1098,7 @@ margin-left: 0em;
 </li>
 </ol>
 
-<p>Combined with the <a class="existingWikiWord" href="/nlab/show/stabilization">stabilization</a> of the <a class="existingWikiWord" href="/nlab/show/scanning+map">scanning map</a> <a class="existingWikiWord" href="/nlab/show/homotopy+equivalence">homotopy equivalence</a> from Prop. <a class="maruku-ref" href="#ScanningMapEquivalenceOverCartesianSpace"></a> this yields a <a class="existingWikiWord" href="/nlab/show/stable+weak+homotopy+equivalence">stable weak homotopy equivalence</a></p>
+<p>Combined with the <a class="existingWikiWord" href="/nlab/show/stabilization">stabilization</a> of the electric field map/<a class="existingWikiWord" href="/nlab/show/scanning+map">scanning map</a> <a class="existingWikiWord" href="/nlab/show/homotopy+equivalence">homotopy equivalence</a> from Prop. <a class="maruku-ref" href="#ScanningMapEquivalenceOverCartesianSpace"></a> this yields a <a class="existingWikiWord" href="/nlab/show/stable+weak+homotopy+equivalence">stable weak homotopy equivalence</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>Maps</mi> <mi>cp</mi></msub><mo stretchy="false">(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>,</mo><msup><mi>Σ</mi> <mi>d</mi></msup><mo stretchy="false">(</mo><mi>Y</mi><mo stretchy="false">/</mo><mo>∂</mo><mi>Y</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>=</mo><msup><mi>Maps</mi> <mrow><mo>*</mo><mo stretchy="false">/</mo></mrow></msup><mo stretchy="false">(</mo><msup><mi>S</mi> <mi>d</mi></msup><mo>,</mo><msup><mi>Σ</mi> <mi>d</mi></msup><mo stretchy="false">(</mo><mi>Y</mi><mo stretchy="false">/</mo><mo>∂</mo><mi>Y</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>=</mo><msup><mi>Ω</mi> <mi>d</mi></msup><msup><mi>Σ</mi> <mi>d</mi></msup><mo stretchy="false">(</mo><mi>Y</mi><mo stretchy="false">/</mo><mo>∂</mo><mi>Y</mi><mo stretchy="false">)</mo><munderover><mo>⟶</mo><mrow><msup><mi>Σ</mi> <mn>∞</mn></msup><mi>scan</mi></mrow><mo>≃</mo></munderover><msup><mi>Σ</mi> <mn>∞</mn></msup><mi>Conf</mi><mo stretchy="false">(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>,</mo><mi>Y</mi><mo stretchy="false">)</mo><mover><mo>⟶</mo><mo>≃</mo></mover><munder><mo>⊕</mo><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow></munder><msup><mi>Σ</mi> <mn>∞</mn></msup><msub><mi>Conf</mi> <mi>n</mi></msub><mo stretchy="false">(</mo><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>,</mo><mi>Y</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
   Maps_{cp}(\mathbb{R}^d, \Sigma^d (Y / \partial Y))
   =
@@ -1172,9 +1209,9 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id="scanning_map_and_cohomotopy">Scanning map and cohomotopy</h3>
+<h3 id="electric_field_mapscanning_map_and_cohomotopy">Electric field map/Scanning map and cohomotopy</h3>
 
-<p>The <a class="existingWikiWord" href="/nlab/show/scanning+map">scanning map</a> and hence the relation of configuration spaces to <a class="existingWikiWord" href="/nlab/show/cohomotopy">cohomotopy</a> goes back to</p>
+<p>The electric field map/<a class="existingWikiWord" href="/nlab/show/scanning+map">scanning map</a> and hence the relation of configuration spaces to <a class="existingWikiWord" href="/nlab/show/cohomotopy">cohomotopy</a> goes back to</p>
 
 <ul>
 <li id="May72">
@@ -1214,6 +1251,18 @@ margin-left: 0em;
 <li>
 <p>Shingo Okuyama, Kazuhisa Shimakawa, <em>Interactions of strings and equivariant homology theories</em>, (<a href="https://arxiv.org/abs/0903.4667">arXiv:0903.4667</a>)</p>
 </li>
+</ul>
+
+<p>For relation to <a class="existingWikiWord" href="/nlab/show/instantons">instantons</a> via <a class="existingWikiWord" href="/nlab/show/topological+Yang-Mills+theory">topological Yang-Mills theory</a>:</p>
+
+<ul>
+<li id="AtiyahJones78"><a class="existingWikiWord" href="/nlab/show/Michael+Atiyah">Michael Atiyah</a>, <a class="existingWikiWord" href="/nlab/show/John+David+Stuart+Jones">John David Stuart Jones</a>, <em>Topological aspects of Yang-Mills theory</em>, Comm. Math. Phys. Volume 61, Number 2 (1978), 97-118 (<a href="https://projecteuclid.org/euclid.cmp/1103904210">arXiv:1103904210</a>)</li>
+</ul>
+
+<p>In speculation regarding <a class="existingWikiWord" href="/nlab/show/Galois+theory">Galois theory</a> over the <a class="existingWikiWord" href="/nlab/show/sphere+spectrum">sphere spectrum</a>:</p>
+
+<ul>
+<li id="MoravaBeardsly17"><a class="existingWikiWord" href="/nlab/show/Jack+Morava">Jack Morava</a>, <a class="existingWikiWord" href="/nlab/show/Jonathan+Beardsley">Jonathan Beardsley</a>, <em>Toward a Galois theory of the integers over the sphere spectrum</em>, Journal of Geometry and Physics Volume 131, September 2018, Pages 41-51 (<a href="https://arxiv.org/abs/1710.05992">arXiv:1710.05992</a>)</li>
 </ul>
 
 <h3 id="ReferencesAlgebraStructureOverOperad">Algebra structure over little <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>dim</mi><mo stretchy="false">(</mo><mi>X</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">dim(X)</annotation></semantics></math>-disk operad</h3>
@@ -1275,13 +1324,13 @@ margin-left: 0em;
 <p>A <a class="existingWikiWord" href="/nlab/show/compactification">compactification</a> of configuration spaces of points was introduced in</p>
 
 <ul>
-<li>William Fulton, Robert MacPherson, <em>A compactification of configuration spaces</em>, Ann. of Math. (2), 139(1):183–225, 1994.</li>
+<li><a class="existingWikiWord" href="/nlab/show/William+Fulton">William Fulton</a>, <a class="existingWikiWord" href="/nlab/show/Robert+MacPherson">Robert MacPherson</a>, <em>A compactification of configuration spaces</em>, Ann. of Math. (2), 139(1):183–225, 1994.</li>
 </ul>
 
 <p>and an <a class="existingWikiWord" href="/nlab/show/operad">operad</a>-<a class="existingWikiWord" href="/nlab/show/structure">structure</a> defined on it (<a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+operad">Fulton-MacPherson operad</a>) in</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Ezra+Getzler">Ezra Getzler</a>, <a class="existingWikiWord" href="/nlab/show/John+Jones">John Jones</a>, <em>Operads, homotopy algebra and iterated integrals for double loop spaces</em>.</li>
+<li><a class="existingWikiWord" href="/nlab/show/Ezra+Getzler">Ezra Getzler</a>, <a class="existingWikiWord" href="/nlab/show/John+Jones">John Jones</a>, <em>Operads, homotopy algebra and iterated integrals for double loop spaces</em> (<a href="https://arxiv.org/abs/hep-th/9403055">arXiv:hep-th/9403055</a>)</li>
 </ul>
 
 <p>Review includes</p>
@@ -1347,14 +1396,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 23, 2018 at 04:33:48.
+  Last revised on January 11, 2019 at 10:40:41.
   See the <a href="https://ncatlab.org/nlab/history/configuration space of points" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+of+points/33" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(33 revisions)</span> | <a href="/nlab/show/diff/configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/configuration+space+of+points" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/configuration+space+of+points/34" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(34 revisions)</span> | <a href="/nlab/show/diff/configuration+space+of+points" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/configuration+space+of+points" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/configuration space of points/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
