--- a/pages/3874.html
+++ b/pages/3874.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9451/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9451/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -484,7 +484,7 @@ margin-left: 0em;
 
 <h3 id="ReferencesPhysics">From the point of view of physics</h3>
 
-<p>The index theorem is supposed to have an interpretation in terms of the <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a> of the <a class="existingWikiWord" href="/nlab/show/superparticle">superparticle</a> on the given space.</p>
+<p>The index theorem has an interpretation in terms of the <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a> of the <a class="existingWikiWord" href="/nlab/show/superparticle">superparticle</a> on the given space.</p>
 
 <p>Traditional physics arguments along these lines include for instance</p>
 
@@ -503,14 +503,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 12, 2019 at 05:49:51.
+  Last revised on January 12, 2019 at 07:20:17.
   See the <a href="https://ncatlab.org/nlab/history/Atiyah-Singer index theorem" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Atiyah-Singer+index+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Atiyah-Singer+index+theorem/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Atiyah-Singer+index+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Atiyah-Singer+index+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Atiyah-Singer+index+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Atiyah-Singer+index+theorem/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Atiyah-Singer+index+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Atiyah-Singer+index+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Atiyah-Singer index theorem/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
