--- a/pages/19934.html
+++ b/pages/19934.html
@@ -692,6 +692,18 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>In the context of <a class="existingWikiWord" href="/nlab/show/Mathieu+moonshine">Mathieu moonshine</a> from <a class="existingWikiWord" href="/nlab/show/string">string</a> <a class="existingWikiWord" href="/nlab/show/sigma+models">sigma models</a> on <a class="existingWikiWord" href="/nlab/show/K3">K3</a>s:</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Matthias+Gaberdiel">Matthias Gaberdiel</a>, <a class="existingWikiWord" href="/nlab/show/Stefan+Hohenegger">Stefan Hohenegger</a>, Roberto Volpato, <em>Symmetries of K3 sigma models</em>, Commun.Num.Theor.Phys. 6 (2012) 1-50 (<a href="https://arxiv.org/abs/1106.4315">arXiv:1106.4315</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Matthias+Gaberdiel">Matthias Gaberdiel</a>, Roberto Volpato, <em>Mathieu Moonshine and Orbifold K3s</em> (<a href="https://arxiv.org/abs/1206.5143">arXiv:1206.5143</a>)</p>
+</li>
+</ul>
+
 <h4 id="of_dimension_6">Of dimension 6</h4>
 
 <p>In 6 dimensions (mostly motivated as singular <a class="existingWikiWord" href="/nlab/show/supersymmetry+and+Calabi-Yau+manifolds">Calabi-Yau compactifications</a> of <a class="existingWikiWord" href="/nlab/show/heterotic+string+theory">heterotic string theory</a> to 4d)</p>
@@ -719,14 +731,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  8, 2019 at 15:37:53.
+  Last revised on January 12, 2019 at 13:35:00.
   See the <a href="https://ncatlab.org/nlab/history/Riemannian orbifold" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Riemannian+orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemannian+orbifold/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Riemannian+orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemannian+orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Riemannian+orbifold" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Riemannian+orbifold/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Riemannian+orbifold" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Riemannian+orbifold" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Riemannian orbifold/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
