--- a/pages/15272.html
+++ b/pages/15272.html
@@ -313,7 +313,7 @@ margin-left: 0em;
 <body>
 <ul>
 <li>
-<p><a href="http://www.maths.tcd.ie/~calin/">Home page</a></p>
+<p><a href="https://cgp.ibs.re.kr/~calin/">Home page</a></p>
 </li>
 
 <li>
@@ -331,6 +331,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Calin+Lazaroiu">Calin Lazaroiu</a>, <em>Collapsing D-branes in one-parameter models and small/large radius duality</em>, Nucl.Phys. B605 (2001) 159-191 (<a href="https://arxiv.org/abs/hep-th/0002004">arXiv:hep-th/0002004</a>)</p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Calin+Lazaroiu">Calin Lazaroiu</a>, <em>On the non-commutative geometry of topological D-branes</em>, JHEP 0511 (2005) 032, <a href="https://arxiv.org/abs/hep-th/0507222">arXiv:hep-th/0507222</a></p>
+</li>
 </ul>
 
 <h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
@@ -344,14 +348,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 12, 2019 at 12:52:25.
+  Last revised on January 13, 2019 at 02:08:34.
   See the <a href="https://ncatlab.org/nlab/history/Calin Lazaroiu" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Calin+Lazaroiu" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Calin+Lazaroiu/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Calin+Lazaroiu" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Calin+Lazaroiu" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Calin+Lazaroiu" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Calin+Lazaroiu/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Calin+Lazaroiu" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Calin+Lazaroiu" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Calin Lazaroiu/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
