--- a/pages/17670.html
+++ b/pages/17670.html
@@ -317,7 +317,12 @@ margin-left: 0em;
 
 <h4 id="physics">Physics</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p><h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2><ul>
+<div class="hide"><div>
+<p><strong><a class="existingWikiWord" href="/nlab/show/physics">physics</a></strong>, <a class="existingWikiWord" href="/nlab/show/mathematical+physics">mathematical physics</a>, <a class="existingWikiWord" href="/nlab/show/philosophy+of+physics">philosophy of physics</a></p>
+
+<h2 id="surveys_textbooks_and_lecture_notes">Surveys, textbooks and lecture notes</h2>
+
+<ul>
 <li>
 <p><em><a class="existingWikiWord" href="/nlab/show/higher+category+theory+and+physics">(higher) category theory and physics</a></em></p>
 </li>
@@ -329,7 +334,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+and+reviews+in+mathematical+physics">books and reviews</a>, <a class="existingWikiWord" href="/nlab/show/physics+resources">physics resources</a></p>
 </li>
-</ul><hr /><p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p><p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p><ul>
+</ul>
+<hr />
+<p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/model+%28physics%29">model (physics)</a></p>
+
+<p><a class="existingWikiWord" href="/nlab/show/experiment">experiment</a>, <a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/computable+physics">computable physics</a></p>
+
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/mechanics">mechanics</a></strong></p>
 
@@ -881,11 +892,12 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Riemann+hypothesis+and+physics">Riemann hypothesis and physics</a></li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/physicscontents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
@@ -939,6 +951,12 @@ margin-left: 0em;
 
 <ul>
 <li id="Schreiber16"><a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>, <em><a href="https://www.physicsforums.com/insights/spectral-standard-model-string-compactifications/">Spectral Standard Model and String Compactifications</a></em>, 2016</li>
+</ul>
+
+<p>Other comment in view of <a class="existingWikiWord" href="/nlab/show/D-brane">D-brane</a>-physics:</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/John+Iliopoulos">John Iliopoulos</a>, <em>Gauge Theories and non-Commutative Geometry: A review</em>, EPJ Web Conf. Volume 182, 2018 6th International Conference on New Frontiers in Physics (ICNFP 2017) (<a href="https://doi.org/10.1051/epjconf/201818202055">doi:10.1051/epjconf/201818202055</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -1000,14 +1018,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 12:26:41.
+  Last revised on January 13, 2019 at 03:39:16.
   See the <a href="https://ncatlab.org/nlab/history/Connes-Lott-Chamseddine-Barrett model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Connes-Lott-Chamseddine-Barrett+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Connes-Lott-Chamseddine-Barrett+model/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Connes-Lott-Chamseddine-Barrett+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Connes-Lott-Chamseddine-Barrett+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Connes-Lott-Chamseddine-Barrett+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Connes-Lott-Chamseddine-Barrett+model/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Connes-Lott-Chamseddine-Barrett+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Connes-Lott-Chamseddine-Barrett+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Connes-Lott-Chamseddine-Barrett model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
